tests/NormalTests/paczka1/fuzzy1/61743153.err
Error in line 2: dP2I S446 14,2
Error in line 37: S446 S327 20,9
